<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayoutCfg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="horizontal" >

		<Button
			android:id="@+id/btn_back_cfg"
			android:layout_width="0dp"
			android:layout_height="50dp"
			android:layout_marginRight="1dp"
			android:layout_weight="1"
			android:background="@drawable/button"
			android:text="@string/btn_back"
			android:textColor="#fff" />

	    <TextView
	        android:id="@+id/section_label_cfg"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/tab_active"
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:text="@string/general_settings"
	        android:textStyle="bold" />
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/configureLayout"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" 
	    android:layout_margin="5dp"
	    android:paddingTop="10dp">
    
	    <CheckBox
		    android:id="@+id/configure_autotextsize"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/autotextsize" />
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="15dp"
	        android:layout_marginTop="10dp" >
	
	        <TextView
	            android:id="@+id/configure_defaultextsize"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/defaulttextsize" />
	        
	        <TextView
	            android:id="@+id/configure_displaytextsize"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/empty"
	            android:width="50dp"
	            android:layout_marginLeft="4dp" />
	
	        <SeekBar
	            android:id="@+id/configure_seektextsize"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:paddingLeft="10dp"
	            android:max="50"
	            android:progress="2" />
	        
	    </LinearLayout>

	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >

			<Button
				android:id="@+id/btn_backup"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:background="@drawable/button"
				android:minHeight="32dp"
				android:text="@string/btn_backup"
				android:textColor="#fff"
				android:textSize="16sp" />
	    
        </LinearLayout>
	    	    
	    
	</LinearLayout>		 	        

</LinearLayout>